2015-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整

2015-07-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整

2015-06-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_world_model.cpp:
	* rcsc/coach/coach_world_model.h:
	- CoachWorldModelにlastSetPlayStartTime(),getSetPlayCount()を追加

2014-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン番号を更新(rc2014)

2014-07-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	- フォーメーション設定ファイルのフォーマットを変更．バー
	ジョン３以降に役割タイプ情報を追加．現在はFormationDTのみ対応．

2014-07-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	* rcsc/formation/formation_dt.h:
	- フォーメーション設定ファイルのフォーマットバージョンを更新．バー
	ジョン３以降は各プレイヤがマーク行動を取るかどうかを指定する情報を
	追加．現在はFormationDTのみ対応．

2014-04-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_kick_to_relative.cpp:
	* rcsc/action/body_stop_dash.h:
	* rcsc/coach/coach_world_state.h:
	* rcsc/formation/formation_cdt.cpp:
	* rcsc/player/action_effector.cpp:
	* rcsc/player/player_command.h:
	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/view_grid_map.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/rcg/serializer_v5.cpp:
	- コンパイラの警告に対応

2013-06-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン文字列を更新．RoboCup2013 Round1

2013-06-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 位置差分によるボール速度更新を視覚情報のみに限定

	* configure.ac:
	- バージョン文字列を更新．RoboCup2013 Round0

2013-06-26  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/geom/delaunay_triangulation.cpp:
	- 頂点数が不足している場合のエラーメッセージ出力を削除

2013-06-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac: